# send2boox-tauri

./: .gitignore  CHANGELOG.md  README.md
.github/workflows/: release-macos.yml
scripts/: build_dmg_tauri2.sh  internal_release_check.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: api.rs  app.rs  auth.rs  calibre.rs  dashboard.rs  device.rs  diagnostics.rs  main.rs  models.rs  push.rs  state.rs  util.rs  zotero.rs
