[package]
name = "send2boox-desktop"
version = "0.1.0"
description = "Internal desktop client for Send2Boox with tray integration"
authors = ["Fallingstar Team"]
license = "UNLICENSED"
repository = "https://github.com/fallingstar/boox-tauri"
edition = "2021"
rust-version = "1.77"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
auto-launch = "0.5"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hmac = "0.12"
httpdate = "1.0"
keyring = { version = "3", features = ["apple-native"] }
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "cookies", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
qrcodegen = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tungstenite = { version = "0.24", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.10", features = ["v4"] }
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
